@@ -1,3 +1,15 @@
+2010-11-12  Mihai Parparita  <mihaip@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        webkit-patch land-cowboy (and other commands) should display the committed SVN revision after landing a patch
+        https://bugs.webkit.org/show_bug.cgi?id=49471
+
+        Right now there's no indication of a successful commit.
+        
+        * Scripts/webkitpy/tool/commands/download_unittest.py:
+        * Scripts/webkitpy/tool/steps/commit.py:
+
 2010-11-12  Kinuko Yasuda  <kinuko@chromium.org>
 
         Reviewed by Ojan Vafai.
